Leaflet updates
- changes gpx lineitems to hold & return observablelists
- changes to work with observablelists
- Singletons HeightChart & TrackMap
- addWaypoint context menu
- addRoute context menu (work in progress)